crates/java-syntax/tests/snapshots/parser_events__parse_interface_with_abstract_method.snap
---
source: crates/java-syntax/tests/parser_events.rs
expression: out
---
SOURCE:
interface A { void f(); }

TOKENS:
INTERFACE_KW "interface"
WHITESPACE " "
IDENTIFIER "A"
WHITESPACE " "
L_BRACE "{"
WHITESPACE " "
VOID_KW "void"
WHITESPACE " "
IDENTIFIER "f"
L_PAREN "("
R_PAREN ")"
SEMICOLON ";"
WHITESPACE " "
R_BRACE "}"


LEX_ERRORS:
<none>


EVENTS:
StartNode(ROOT, forward_parent=None)
StartNode(INTERFACE_DECL, forward_parent=None)
StartNode(MODIFIER_LIST, forward_parent=None)
FinishNode
AddToken
AddToken
StartNode(INTERFACE_BODY, forward_parent=None)
AddToken
StartNode(METHOD_DECL, forward_parent=None)
StartNode(MODIFIER_LIST, forward_parent=None)
FinishNode
AddToken
AddToken
StartNode(FORMAL_PARAMETERS, forward_parent=None)
AddToken
AddToken
FinishNode
AddToken
FinishNode
AddToken
FinishNode
FinishNode
FinishNode


PARSE_ERRORS:
<none>
