crates/java-syntax/tests/snapshots/parser_events__parse_mixed_array_dimensions.snap
---
source: crates/java-syntax/tests/parser_events.rs
expression: out
---
SOURCE:
class A { int[] a, b[]; }

TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "A"
WHITESPACE " "
L_BRACE "{"
WHITESPACE " "
INT_KW "int"
L_BRACKET "["
R_BRACKET "]"
WHITESPACE " "
IDENTIFIER "a"
COMMA ","
WHITESPACE " "
IDENTIFIER "b"
L_BRACKET "["
R_BRACKET "]"
SEMICOLON ";"
WHITESPACE " "
R_BRACE "}"


LEX_ERRORS:
<none>


EVENTS:
StartNode(ROOT, forward_parent=None)
StartNode(CLASS_DECL, forward_parent=None)
StartNode(MODIFIER_LIST, forward_parent=None)
FinishNode
AddToken
AddToken
StartNode(CLASS_BODY, forward_parent=None)
AddToken
StartNode(FIELD_DECL, forward_parent=None)
StartNode(MODIFIER_LIST, forward_parent=None)
FinishNode
StartNode(TYPE, forward_parent=None)
AddToken
StartNode(DIMENSIONS, forward_parent=None)
AddToken
AddToken
FinishNode
FinishNode
StartNode(VARIABLE_DECLARATOR_LIST, forward_parent=None)
StartNode(VARIABLE_DECLARATOR, forward_parent=None)
AddToken
Tombstone
FinishNode
AddToken
StartNode(VARIABLE_DECLARATOR, forward_parent=None)
AddToken
StartNode(DIMENSIONS, forward_parent=None)
AddToken
AddToken
FinishNode
FinishNode
FinishNode
AddToken
FinishNode
AddToken
FinishNode
FinishNode
FinishNode


PARSE_ERRORS:
<none>
