crates/java-syntax/tests/snapshots/parser_events__parse_recovery_compact_constructor_like_in_class.snap
---
source: crates/java-syntax/tests/parser_events.rs
expression: out
---
SOURCE:
class A { A {} }

TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "A"
WHITESPACE " "
L_BRACE "{"
WHITESPACE " "
IDENTIFIER "A"
WHITESPACE " "
L_BRACE "{"
R_BRACE "}"
WHITESPACE " "
R_BRACE "}"


LEX_ERRORS:
<none>


EVENTS:
StartNode(ROOT, forward_parent=None)
StartNode(CLASS_DECL, forward_parent=None)
StartNode(MODIFIER_LIST, forward_parent=None)
FinishNode
AddToken
AddToken
StartNode(CLASS_BODY, forward_parent=None)
AddToken
StartNode(FIELD_DECL, forward_parent=None)
StartNode(MODIFIER_LIST, forward_parent=None)
FinishNode
StartNode(TYPE, forward_parent=None)
StartNode(QUALIFIED_NAME, forward_parent=None)
AddToken
FinishNode
Tombstone
FinishNode
StartNode(VARIABLE_DECLARATOR_LIST, forward_parent=None)
StartNode(VARIABLE_DECLARATOR, forward_parent=None)
Error(ParseError { kind: ExpectedToken { expected: [IDENTIFIER], found: Some(L_BRACE) }, pos: 4 })
Tombstone
FinishNode
FinishNode
Error(ParseError { kind: ExpectedToken { expected: [SEMICOLON], found: Some(L_BRACE) }, pos: 4 })
FinishNode
StartNode(INSTANCE_INITIALIZER, forward_parent=None)
StartNode(BLOCK, forward_parent=None)
AddToken
AddToken
FinishNode
FinishNode
AddToken
FinishNode
FinishNode
FinishNode


PARSE_ERRORS:
ParseError { kind: ExpectedToken { expected: [IDENTIFIER], found: Some(L_BRACE) }, pos: 4 }
ParseError { kind: ExpectedToken { expected: [SEMICOLON], found: Some(L_BRACE) }, pos: 4 }
